<resources>
    <string name="app_name">My UADB</string>
    <string name="connection">Connection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">uab@uabd.edu.sn</string>
    <string name="presentation">Presentation</string>
    <string name="formation">Formation</string>
    <string name="mark">My marks</string>
    <string name="university">University</string>
    <string name="divers">Divers</string>

    <string name="help">Help</string>
    <string name="back">Back</string>
    <string name="inscription">Inscription</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="degrees">Degrees</string>
    <string name="O_level">O Level</string>
    <string name="bachelor">Bachelor</string>
    <string name="master">Master</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error_fields">Required Field</string>
    <string name="error_parameters">Incorrect parameters</string>
    <string name="error_connection">Connection error</string>
    <string name="error_inscription">Inscription failed</string>
    <string name="success_inscription">Inscription successfull</string>
    <string name="welcome">Welcome</string>
    <string name="Disconnect">Disconnect</string>
    <string name="wait">Please wait</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Forget password ?</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="history_uadb">L\'Université de Bambey est l\'héritière du Centre Universitaire Régional (CUR) de Bambey, dont la création remonte en 2004 (cf. décret 2004-916 portant « création et organisation d/\'un CUR à Bambey »), même si les enseignements n/\'y auront finalement démarré qu/\'en 2007. Il s\'agissait à l\'époque de la première expérimentation au Sénégal du modèle du CUR, net à ce jour, elle reste encore une expérience unique. Selon les termes mêmes retenus à l/\'issue du séminaire de réflexion sur la carte universitaire (30-31 octobre 2002), les missions du CUR sont « de préparer les apprenants à la formation universitaire (…) et d/\'assurer la formation professionnelle », en contribuant « à la mise en place des conditions de qualification des citoyens par la formation continue » et en veillant « à valoriser et à développer les atouts (économiques, culturels et sociaux…) au niveau du site d/'implantation et des zones voisines ». Dans le décret 2004-916, il est également stipulé que « le CUR est un établissement décentralisé de formation générale et professionnelle universitaire de courte durée répondant aux exigences du développement local », ce qui le distingue donc des universités classiques.

Depuis 2009, le CUR de Bambey a été transformé en université de plein exercice, suite à la promulgation du décret 2009-1221, portant « création, organisation et fonctionnement de l/'Université de Bambey ».
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>