<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dim_all"
    tools:context=".InscriptionFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp">

            </ImageView>
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dim_top"
                android:textSize="@dimen/dim_title"
                android:gravity="center"
                android:text="@string/inscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <EditText
                android:id="@+id/txtFirstName"
                android:hint="@string/first_name"
                android:layout_marginTop="@dimen/dim_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>
            <EditText
                android:id="@+id/txtLastName"
                android:hint="@string/last_name"
                android:layout_marginTop="@dimen/dim_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>
            <TextView
                android:text="@string/degrees"
                android:textSize="@dimen/dim_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <CheckBox
                android:id="@+id/cbOLevel"
                android:layout_marginLeft="@dimen/dim_middle"
                android:layout_marginTop="@dimen/dim_top"
                android:text="@string/o_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </CheckBox>
            <CheckBox
                android:id="@+id/cbBachelor"
                android:layout_marginLeft="@dimen/dim_middle"
                android:layout_marginTop="@dimen/dim_top"
                android:text="@string/bachelor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </CheckBox>
            <CheckBox
                android:id="@+id/cbMaster"
                android:layout_marginLeft="@dimen/dim_middle"
                android:layout_marginTop="@dimen/dim_top"
                android:text="@string/master"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </CheckBox>
            <Button
                android:textColor="@color/colorWhite"
                android:id="@+id/btnSave"
                android:background="@color/colorBluePrimary"
                android:layout_margin="@dimen/dim_all"
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Button>
        </LinearLayout>

</ScrollView>